# Ableton_Looper_Suite

./: .gitignore  FIRST-MAC-SESSION.md  README.md  package-lock.json  package.json  tsconfig.json
contracts/: CONTRACTS.md
contracts/schemas/: ai-tool-call.schema.json  audio-sidecar.descriptor.json  spectral-frame.descriptor.json  ws-state.schema.json  ws-telemetry.schema.json
contracts/types/: ai-tools.ts  audio-sidecar.ts  command-rule.ts  ids.ts  index.ts  osc.ts  spectral.ts  template.ts  ws.ts
devgen/: amp.js  amxd_check_looper.py  amxd_check_spectral.py  amxd_setnames.py  amxd_settype.py  amxd_strip_browser.py  amxd_style_amp.py  amxd_style_looper.py  amxd_wire_amp.py  amxd_wire_looper.py  amxd_wire_spectral.py  amxd_wire_udpsend.py  looper.js  spectral-sender.cjs  spectral.js  tone3000_bridge.py
documentation/: AI-DEVICE-GENERATION.md  AMP-HOST-HANDOFF.md  CODEBASE_ANALYSIS.xml  MAX-ENV-SETUP.md
engine/: README.md  extension.py  install.sh  test_offline.py
harnesses/: README.md  fake-engine.ts  package-lock.json  package.json  spectral-sender.js  spectral.js  tsconfig.json
harnesses/src/: 01-osc-latency.ts  02-load-item-verify.ts  03-insert-step-automation.ts  04-instrumented.ts  04-looper-state-roundtrip.ts  05-confirmed-echo-pinger.ts  05-spectral-bench.ts  06-eq-param-probe.ts  07-eq-write-probe.ts  (+14 more)
hub/: README.md  package-lock.json  package.json  tsconfig.json
models/: models.json
reports/: API-REALITY.md  PROVISIONAL-SEAMS.md
sidecar/: CMakeLists.txt  main.cpp
sidecar-experiment/: FINDINGS.md  verify-apc1.ts
tablet/: app.js  index.html
(+36 files in other folders)
